# 2captcha_rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
captcha_oxide/: Cargo.toml
captcha_oxide/src/: captcha.rs  captcha_solver.rs  cookie.rs  lib.rs  prelude.rs  proxy.rs  two_captcha.rs
captcha_oxide/src/captcha/: solution.rs  types.rs
captcha_oxide/src/captcha/solution/: status.rs
captcha_oxide/src/captcha/types/: amazon_captcha.rs  arkose_labs_captcha.rs  atb_captcha.rs  audio_captcha.rs  bounding_box_captcha.rs  capy_captcha.rs  coordinates_captcha.rs  cut_captcha.rs  cyber_siara_captcha.rs  data_dome_captcha.rs  draw_around_captcha.rs  friendly_captcha.rs  grid_captcha.rs  h_captcha.rs  key_captcha.rs  lemin_captcha.rs  mt_captcha.rs  normal_captcha.rs  recaptcha.rs  rotate_captcha.rs  tencent_captcha.rs  text_captcha.rs  turnstile_captcha.rs
captcha_oxide/src/captcha/types/bounding_box_captcha/: builder.rs
captcha_oxide/src/captcha/types/draw_around_captcha/: builder.rs
captcha_oxide/src/captcha/types/draw_around_captcha/builder/: type_state.rs
captcha_oxide/src/captcha/types/geetest_captcha/: v3.rs  v4.rs
captcha_oxide/src/captcha/types/grid_captcha/: builder.rs
captcha_oxide/src/captcha/types/recaptcha/: solution.rs  v2.rs  v2_enterprise.rs  v3.rs
captcha_oxide/src/captcha/types/turnstile_captcha/: challenge_page.rs  solution.rs  standalone.rs
captcha_oxide/src/captcha_solver/: builder.rs  error.rs  solution_statusy.rs
captcha_oxide/src/proxy/: address.rs  kind.rs
captcha_oxide/src/two_captcha/: create_task.rs  get_balance.rs  get_task_result.rs  report.rs
core/: Cargo.toml
core/src/: ext.rs  lib.rs  macros.rs
core/src/ext/: generic_param.rs  ident.rs
core/src/macros/: parsing.rs
core/src/macros/expansion/attr/: captcha.rs
core/src/macros/expansion/attr/captcha/: builder.rs
core/src/macros/expansion/attr/captcha/builder/: classified_fields.rs  type_state.rs
core/src/macros/parsing/: assignment.rs  captcha.rs
core/src/macros/parsing/assignment/: assign.rs  assign_int.rs  assign_str.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
src/captcha_types/: mod.rs
src/captcha_types/arkose_labs_captcha/: task.rs
src/captcha_types/geetest/geetest_v4/: builder.rs  task.rs
src/captcha_types/h_captcha/: task.rs
src/captcha_types/key_captcha/: mod.rs
src/captcha_types/recaptcha/recaptcha_v2_enterprise/: task.rs
src/cookie/: mod.rs
src/solver/: builder.rs  error.rs  mod.rs
src/solver/requests/: create_task.rs  get_balance.rs  get_task_result.rs  mod.rs
