[package]
name = "captcha_oxide"
license = "MIT OR Apache-2.0"
version = "6.0.0"
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/escritorio-gustavo/captcha_oxide"
repository = "https://github.com/escritorio-gustavo/captcha_oxide"
authors = ["gustavo-shigueo"]
description = "Library for interacting with the 2Captcha API to solve captcha puzzles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
url = { version = "2", features = ["serde"] }
serde_json = "1"
lazy_static = "1"
tokio = "1"
chrono = { version = "0.4", features = ["serde"] }
captcha_oxide_macros = { version = "0.1.0", path = "../macros" }
