[package]
name = "captcha_oxide"
license = "MIT OR Apache-2.0"
version = "6.0.0"
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/escritorio-gustavo/captcha_oxide"
repository = "https://github.com/escritorio-gustavo/captcha_oxide"
authors = ["gustavo-shigueo"]
description = "Library for interacting with the 2Captcha API to solve captcha puzzles"
rust-version = "1.70.0"

[dependencies]
captcha_oxide_macros = { version = "0.1.0", path = "../macros" }
reqwest = { version = "0.12", features = [
  "json",
  "default-tls",
], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_repr = { version = "0.1", default-features = false }
thiserror = { version = "1", default-features = false }
url = { version = "2", features = ["serde"], default-features = false }
serde_json = { version = "1", default-features = false }
lazy_static = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
chrono = { version = "0.4", features = ["serde"], default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
dotenv = "0.15"

[features]
callback = []
