[package]
name = "captcha_oxide_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = [
  "parsing",
  "printing",
  "full",
  "extra-traits",
  "clone-impls",
], default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
